--- a/ll-default-view/package.json
+++ b/ll-default-view/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bmat": "^0.1.32",
     "logicline-view": "file:/opt/logicline/logicline-view",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
